feat: Implementa encabezado de carpeta y modal para mover recursos, añadiendo componentes de UI genéricos como diálogo, área de desplazamiento y árbol de archivos.

--- a/components.json
+++ b/components.json
@@ -18,5 +18,7 @@
     "lib": "@/app/lib",
     "hooks": "@/app/hooks"
   },
-  "registries": {}
+  "registries": {
+    "@magicui": "https://magicui.design/r/{name}.json"
+  }
 }
